testsuite/tests/th/T16976f.stderr

T16976f.hs:5:1: error: ‘doesn'tExist’ is not in scope at a reify
